<resources>
    <string name="app_name">madpractical</string>
    <string name="user_name_textview_placeholder_text">Hello World!</string>
    <string name="user_description_textview_placeholder_text">
        Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
    </string>
    <string name="follow_button_text">FOLLOW</string>
    <string name="message_button_text">MESSAGE</string>
    <string name="unfollow_button_text">UNFOLLOW</string>
    <string name="login_activity_header_text">Login Page</string>
    <string name="username_field_text">Username:</string>
    <string name="password_field_text">Password:</string>
    <string name="login_text">Login</string>
</resources>