<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LoginActivityHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/login_activity_header_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UsernameFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="120dp"
        android:text="@string/username_field_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/LoginActivityHeaderTextView"
        app:layout_constraintTop_toTopOf="@+id/LoginActivityHeaderTextView" />

    <TextView
        android:id="@+id/PasswordFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/password_field_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/UsernameFieldTextView"
        app:layout_constraintTop_toTopOf="@+id/UsernameFieldTextView" />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/UsernameFieldTextView"
        app:layout_constraintTop_toTopOf="@+id/UsernameFieldTextView" />

    <EditText
        android:id="@+id/PasswordTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/PasswordFieldTextView"
        app:layout_constraintTop_toTopOf="@+id/PasswordFieldTextView" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_text"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/PasswordTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextEdit"
        app:cornerRadius="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>