<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="50"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/MainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/MainScrollViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/AndroidLogoImageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/UserNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_name_textview_placeholder_text"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/UserDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/user_description_textview_placeholder_text"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/ButtonsLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <Button
                    android:id="@+id/FollowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/follow_button_text"
                    app:cornerRadius="6dp" />

                <Button
                    android:id="@+id/MessageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_weight="1"
                    android:text="@string/message_button_text"
                    app:cornerRadius="6dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>